# control-allocation

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  run_generators.py
.github/workflows/: main.yml  test.yml
approachone/: README.md  allocate.py  code_gen.py  continuous.py  gen_allocate.py  gen_diagrams.py  gen_readme.py  gen_sim.py  main.py  model.py  sim.py  tester.py
approachone/tests/: test_main.py
approachthree/: README.md  allocate.py  continuous.py  gen_allocate.py  gen_diagrams.py  gen_readme.py  main.py  model.py  tester.py
approachthree/tests/: test_main.py
approachtwo/: README.md  allocate.py  continuous.py  gen_allocate.py  gen_diagrams.py  gen_readme.py  gen_sim.py  main.py  model.py  sim.py  tester.py
approachtwo/tests/: test_main.py
common/: continuous.py  geometry.py  model.py  pyproject.toml  sim.py  utils.py
common/common/: continuous.py  gen_sim.py  geometry.py  model.py  sim.py  utils.py
common/tests/: test_geometry.py  test_model.py  test_sim.py  test_utils.py
