[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "common"
version = "0.1.0"
dependencies = ["matplotlib", "numpy", "sympy", "ipython"]

[tool.setuptools.packages.find]
include = ["common*"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = ["common/tests", "approachone/tests", "approachtwo/tests", "approachthree/tests"]
